BUG#42275 - Falcon hangs for any schedule set to " * * * * * "

Setting falcon-scavenge-schedule to an incorrect value causing
an infinite loop.